static/css/style.css
body {
    font-family: Montserrat, sans-serif;
    transition: 0.3s;
}

h1, h2, h3, .navbar-brand, .logo {
    font-family: Bebas Neue, sans-serif;
}

/*  Navbar */

.navbar {
    border-bottom: 5px solid #EEBC1D;
}

.navbar-brand, .navbar-dark .navbar-nav .nav-link {
    color: #FAFAFA;
    transition: 0.25s;
}

.navbar-brand {
    font-size: 2rem;
    padding: 0.25rem 1rem 0 1rem;
    margin-left: 1rem;
} 

.navbar-dark .navbar-brand:hover, .navbar-dark .navbar-nav .nav-link:hover, .sidenav a:hover, .sidenav .closebtn:hover, .socials i:hover, .logo:hover, .back-to-top-button:hover {
    color: #EEBC1D;
    cursor: pointer;
}

.bg-dark {
    background-color: #111 !important;
}

.navbar-buttons {
    margin-right: 2rem;
    justify-content: end !important;
}

.navbar-button {
    width: 100px;
    background-color: #EEBC1D;
    border: 2px solid #EEBC1D;
    color: #000;
    font-weight: 600;
    margin: .125rem 0.25rem 0;
    padding: .375rem .25rem;
    border-radius: .25rem;
    text-decoration: none;
    transition: 0.25s;
}

.navbar-button i {
    margin-right: 5px;
}

.navbar-button:hover {
    color: #c4c4c4;
    background-color: transparent;
}

.navbar-toggler {
    margin-right: 2rem;
}


/* Side Bar */

.sidenav {
    height: 100%; /* 100% Full-height */
    width: 0px; /* 0 width - change this with JavaScript */
    position: fixed; /* Stay in place */
    z-index: 1050; /* Stay on top */
    top: 0; /* Stay at the top */
    right: 0;
    background-color: #111; /* Black*/
    border-left: 0px solid #EEBC1D;
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 60px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

.content-cover {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1045;
    top: 0;
    left: 0;
    background-color: rgba(0,0,0, 0.4);
    overflow-y: auto;
    overflow-x: hidden;
    text-align: center;
    opacity: 0;
    transition: opacity 1s;
}

.sidenav hr {
    border: 2px solid #EEBC1D;
    background-color: #EEBC1D;
    margin: 20px 32px;
    border-radius: 50px;
    width: 75%;
    opacity: 1;
}

.sidenav a {
    width: 180px;
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 1.25rem;
    color: #fafafa;
    display: block;
    transition: 0.3s;
}

.sidenav button {
    margin: 8px 8px 8px 32px;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    margin: 0;
    right: 25px;
    font-size: 4rem;
    border: none;
    background-color: transparent;
    color: #fafafa;
}
  

@media (max-width: 320px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
    .navbar-brand {margin: 0;}
    .navbar-toggler  {margin-right: 0.5rem;}
}

/* Content */

.content {
    min-height: calc(100vh - 159px);
}

/* Footer */

footer {
    background-color: #111;
    color: #fafafa;
    border-top: 5px solid #EEBC1D;
}

.socials {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.socials i, .back-to-top-button, .logo {
    text-decoration: none;
    color: #fafafa;
    transition: 0.3s;
    font-size: 1.3rem;
    margin: 10px 5px;
    padding: 3px;
}

footer .logo {
    font-size: 2rem;
    margin: 1px 5px;
}

